// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      nice game 
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gVZcgN bbXxSi"
    >
      * 
    </span>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd sc-hKlkwe Mofma TwjoD"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-iucATu sc-ljgBMv cLnsof jooSZT"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-DCiKP fQdDCH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      hey
       
      <span
        class="sc-edvVIM BgKKj sc-DCiKP fQdDCH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-DCiKP fQdDCH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      hey
       
      <span
        class="sc-edvVIM BgKKj sc-DCiKP fQdDCH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      <span
        class="sc-edvVIM BgKKj sc-DCiKP fQdDCH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-DCiKP fQdDCH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc DSCMc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      Hey
       
      <span
        class="sc-edvVIM BgKKj sc-DCiKP fQdDCH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX eipxVU"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX eipxVU"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX eipxVU"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-tRtYB bRPAtW sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-hFQsEd Mofma"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-iucATu cLnsof"
    >
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-tRtYB bRPAtW sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
